# template-repo

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  setup.cfg
.github/workflows/: Linux-Build.yml
src/nnk/: app.py  nnk.py  util.py
src/{pkg}/: app.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
