[metadata]
name = nnk 
description = A github template
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis
author_email = "Jordan R. Willis" <jwillis0720@gmai.com>
license = MIT
version = 0.0.1
license_file = LICENSE
platforms = any
classifiers =
	Development Status :: 1 - Planning
	Environment :: Console
	Intended Audience :: Science/Research
	License :: MIT License
	Operating System :: MacOS
	Operating System :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Antibodies
project_urls =
	Bug Tracker = https://github.com/SchiefLab/nnk-analysis/issues
	Source Code = https://github.com/SchiefLab/nnk-analysis.git

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False
package_dir=
    =src
py_modules= module
install_requires =
	pre-commit
	biopython
	click >= 7.0
	filetype
	pandas >= 1.0
	wheel
	requests
	semantic_version

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
	nnk = nnk.app:nnk

[bumpversion:file:.bump2version.cfg]
